Fixed some alignments
fixed some aignments

--- a/css/app-style.css
+++ b/css/app-style.css
@@ -5,7 +5,7 @@
     --body-bgcolor: #ffffff;
     --main-button-bgcolor: #0d1d3a;
     --tab-selected-bgcolor: #0d1d3a;
-    --elements-persent: 33%;
+    --elements-persent: 33.3%;
 }
 
 
